--- a/okteto.yml
+++ b/okteto.yml
@@ -4,27 +4,5 @@ build:
     context: .
     dockerfile: Dockerfile
 
-namespace: kinhan
-
-services:
-  kin-xr-20220515:
-    name: kin-xr-20220515
-    build: vote
-    scale: 2
-    ports:
-      - 8080:8080
-    environment:
-      - UUID=${UUID}
-      - PORT=8080
-
 deploy:
-  resources:
-    reservations:
-      cpu: 300m
-      memory: 500Mi
-    limits:
-      cpu: 500m
-      memory: 800Mi
-  restart_policy:
-    condition: on-failure
-    max_attempts: 3
+  compose: okteto-docker-compose.yml
