--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -9,25 +9,18 @@ header {
     Referrer-Policy no-referrer-when-downgrade
 }
 
-@websocket_xx_vm {
-    header Connection *Upgrade*
-    header Upgrade    websocket
-    path /vm
+proxy /vm unix//etc/caddy/vm {
+    websocket
+    header_upstream -Origin
 }
-reverse_proxy @websocket_xx_vm unix//etc/caddy/vm
 
-
-@websocket_xx_vl {
-    header Connection *Upgrade*
-    header Upgrade    websocket
-    path /vl
+proxy /vl unix//etc/caddy/vl {
+    websocket
+    header_upstream -Origin
 }
-reverse_proxy @websocket_xx_vl unix//etc/caddy/vl
 
-@websocket_xx_s {
-    header Connection *Upgrade*
-    header Upgrade    websocket
-    path /s
+proxy /s 127.0.0.1:5234 {
+    websocket
+    header_upstream -Origin
 }
-reverse_proxy @websocket_xx_s 127.0.0.1:5234
 
