--- a/k8s.yml
+++ b/k8s.yml
@@ -15,7 +15,7 @@ spec:
       restartPolicy: Always
       containers:
         - name: hxx
-          image: kinhanlin/hxx:v1.3
+          image: kinhanlin/hxx:latest
           ports:
             - containerPort: 8080
             
