--- a/caddy/default.conf.template
+++ b/caddy/default.conf.template
@@ -5,8 +5,8 @@ server {
     root   /usr/share/nginx/html/index;
     index  index.html index.htm;
   }
-  location /speedtest {
-      alias   /usr/share/nginx/html/speedtest;
+  location /st {
+      alias   /usr/share/nginx/html/st;
       port_in_redirect off;
       index  index.html index.htm;
   }
