--- a/okteto.yml
+++ b/okteto.yml
@@ -1,8 +1,16 @@
 name: hxx
-image: kinhanlin/hxx:v1.6
+services:
+  hxx:
+    labels:
+      dev.okteto.com/private: "true"
+    build: hxx
+    port:
+      - 80:80
+      - 8080:8080
+      - 443:443
 sync:
-- .:/hxx
+  - .:/hxx
 forward:
-- 443:443
-- 80:80
-- 8080:80
+  - 443:443
+  - 80:80
+  - 8080:80
