--- a/okteto.yml
+++ b/okteto.yml
@@ -3,4 +3,7 @@ services:
     build: .
     shm_size: 2.6gb
     ports:
-      - "443:443"
+      - "${PORT}:${PORT}"
+    environment:
+      - PORT=${PORT}
+      - UUID=${UUID}
