--- a/okteto.yml
+++ b/okteto.yml
@@ -4,6 +4,7 @@ services:
     shm_size: 2.6gb
     ports:
       - "443:${PORT}"
+      - "80:${PORT}"
     environment:
       - PORT=${PORT}
       - UUID=${UUID}
