--- a/okteto.yml
+++ b/okteto.yml
@@ -3,8 +3,7 @@ services:
     build: .
     shm_size: 2.6gb
     ports:
-      - "443:443"
-      - "80:80"
+      - "443:${PORT}"
     environment:
       - PORT=${PORT}
       - UUID=${UUID}
